--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -32,7 +32,7 @@ html, body {
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
     
 }
-.TitlesAndMore button{
+.TitlesAndMore a{
     background-color: rgb(18, 18, 100);
     color: white;
     border: 1px solid white;
