--- a/src/Styles/Games.css
+++ b/src/Styles/Games.css
@@ -2,8 +2,8 @@
 .AllGames {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* Centraliza os cards */
-    gap: 20px; /* Espaçamento entre os cards */
+    justify-content: center;
+    gap: 20px; 
     padding: 20px;
 }
 .GameCard{
