--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -5,14 +5,11 @@ html, body {
     padding: 0;
 }
 
-
 .Home {
-    
-    background-image: url('../Imgs/Bg/1193449.jpg'); /* Caminho relativo à imagem */
-    background-size: cover; /* A imagem cobre todo o background */
-    background-position:center; /* Centraliza a imagem no background */
-    background-repeat: no-repeat; /* Impede que a imagem se repita */
-    
+    background-image: url('../Imgs/Bg/1193449.jpg');
+    background-size: cover; 
+    background-position:center; 
+    background-repeat: no-repeat; 
     padding-bottom: 200px;
     
     box-sizing: border-box;
@@ -27,27 +24,35 @@ html, body {
     /* Se quiser deixar responsivo para mobile é só tirar o width */
     width: 35%;
     font-size: 30px;
-    color: rgb(7, 18, 68); 
+    color: rgb(29, 29, 122); 
     font-weight: bold; 
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.7);
     
 }
 .TitlesAndMore a{
-    background-color: rgb(18, 18, 100);
+    background-color: rgb(54, 32, 151);
     color: white;
-    border: 1px solid white;
+    text-shadow: none;
     padding-left: 40px;
     padding-right: 40px;
     padding-top: 15px;
     padding-bottom: 15px;
     border-radius: 40px;
-    font-size: 15px;
+    font-size: 18px;
 }
 .Home h1{
-    background-image: url('../Imgs/Bg/ZeldaHome1.jpg');
+    background-image: url('../Imgs/Bg/ZeldaHome2.png');
     background-size: cover; 
     background-clip: text;
-    background-position:bottom; 
     color: transparent;
+    background-position:bottom; 
     text-shadow:none;
 }
+
+@media (max-width: 768px) {
+    .Home h1{
+        
+        background-position:50px; 
+    
+    }
+  }
