--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 
 body{
-    background-color: rgb(255, 255, 255);
-   
+     background-image: url('./Imgs/Bg/NavBar1.png');
+    background-repeat: repeat;
+    background-size: 620px;
 }
