--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -47,6 +47,7 @@ html, body {
     color: transparent;
     background-position:bottom; 
     text-shadow:none;
+    text-align: center;
 }
 
 @media (max-width: 768px) {
