--- a/src/Styles/SeeMore.css
+++ b/src/Styles/SeeMore.css
@@ -7,11 +7,17 @@
   justify-content: center;
 
 }
+
 .SeeMore h1 {
   font-size: 2.5rem;
   margin: 50px;
   margin-bottom: 80px;
-  color: rgb(0, 0, 0);
+  background-image: url('../Imgs/Bg/Florest.jpg');
+  background-size: cover;
+  background-clip: text;
+  color: transparent;
+  background-position: center;
+
 }
 
 .Box {
@@ -20,7 +26,7 @@
 }
 
 .SideBox {
-  background-image: url('../Imgs/Bg/image.png');
+  background-image: url('../Imgs/Bg/Link.png');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -55,14 +61,15 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  
+
 }
 
 .Links a {
   text-decoration: none;
   padding: 15px 30px;
   border-radius: 10px;
-  color: white;
+  color: rgb(240, 240, 240);
+  font-size: 20px;
   font-weight: bold;
   transition: 0.3s ease;
   display: flex;
@@ -72,8 +79,7 @@
   height: 120px;
   background-size: cover;
   background-position: center;
-  position: relative;
-  overflow: hidden;
+
 }
 
 
@@ -81,46 +87,50 @@
 .Links a:hover {
   transform: scale(1.05);
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
-  z-index: 2;
 }
 
 .Bosses,
 .Characters,
 .Games,
-.Monsters {
-  background-color: rgb(20, 20, 20);
-  width: 150px;
-  height: 100px;
+.Monsters,
+.Dungeons {
+  background: rgba(0, 0, 0, 0.658);
   border: none;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* .Games {
-  background-image: url('../Imgs/Bg/ZeldaHome1.jpg');
+.BoxGames,
+.BoxBosses,
+.BoxCharacters,
+.BoxMonsters,
+.BoxDungeons{
   background-size: cover;
   background-position: center;
+  border-radius: 10px;
+  background-size: 200px;
+  background-repeat: no-repeat;
+  background-color: rgb(255, 255, 255);
 }
 
-
-.Bosses {
-  background-image: url('../Imgs/Bg/Ganondorf.png');
-  background-size: cover;
-  background-position: center;
+.BoxGames {
+  background-image: url('../Imgs/Bg/ZeldaLogo.png');
 
 }
 
-.Characters {
-  background-image: url('../Imgs/Characters/image1.png');
-  background-size: cover;
-  background-position: center;
+.BoxBosses {
+  background-image: url('../Imgs/Bg/Boss.png');
 }
 
-.Monsters {
+.BoxCharacters {
+  background-image: url('../Imgs/Bg/Characters.png');
+}
+
+.BoxMonsters {
   background-image: url('../Imgs/Bg/Monster.png');
-  background-size: cover;
-  background-position: center;
-
-} */
+}
+.BoxDungeons{
+  background-image: url('../Imgs/Bg/Link2.png');
+}
 
 
 .Links a:hover {
