--- a/src/Styles/Games.css
+++ b/src/Styles/Games.css
@@ -13,14 +13,15 @@
 .GameCard{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
-    width: 330px;
+    width: 300px;
+  
     text-align: center;
     border-right: 1px #7f8c8d solid;
     border-bottom: 1px #7f8c8d solid;
-    border-radius: 10px;
-    padding: 20px;
+    border-radius: 20px;
+    padding: 15px;
     gap: 10px;
     color: #515555;
     box-shadow: 1px 1px 2px;
@@ -29,6 +30,8 @@
 }
 
 .GameCard a{
+    display: flex;
+    text-align:end;
     background-color: rgb(44, 171, 180);
     color: white;
     border: 1px solid white;
@@ -37,7 +40,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     border-radius: 40px;
-    font-size: 15px;
+    font-size: 13px;
     
 }
 .GameCard:hover {
