--- a/web/src/Styles/Game.css
+++ b/web/src/Styles/Game.css
@@ -23,7 +23,7 @@
 }
 
 .BoxArt {
-    width: 225px;
+    width: 255px;
     transform-style: preserve-3d;
     animation: rotate3D 4s infinite linear;
     border-radius: 5px;
@@ -46,7 +46,7 @@
     display: flex;
     margin: 20px;
     flex-direction: column;
-
+    margin-left: 60px;
     justify-items: center;
     padding: 20px;
     background-color: rgb(252, 252, 252);
@@ -56,12 +56,28 @@
     color: #515555;
 
 }
-.CoolBar{
-    background-color: #d9e2db8e;
-    width: 20px;
-   
-    height: 100vh;
-    margin-left: 20px;
-    margin-right: 40px;
+@media (max-width: 768px) {
+    .GameInfo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .GameImgs {
+        margin-bottom: 90px;
+    }
+    .About {
+        display: flex;
+        margin: 20px;
+        flex-direction: column;
+        margin-left: 20px;
+        justify-items: center;
+        padding: 20px;
+        background-color: rgb(252, 252, 252);
+        color: rgb(0, 0, 0);
+        border-radius: 20px;
+        box-shadow: 0px 1px 2px 0px #7f8c8d;
+        color: #515555;
     
-}
+    }
+  }
