--- a/web/src/Styles/Characters.css
+++ b/web/src/Styles/Characters.css
@@ -3,15 +3,21 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    
     gap: 20px;
 }
 
 .CharacterCard{
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 20px;
-    width: 200px;
-    height: 300px;
-    background-color: white;
+    width: 300px;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.822);
     border-radius: 20px;
+    color: rgb(54, 54, 54);
+}
+.CharacterCard img{
+    max-height: 300px;
 }
