--- a/web/src/Styles/Characters.css
+++ b/web/src/Styles/Characters.css
@@ -12,12 +12,47 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    width: 300px;
-    height: 400px;
-    background-color: rgba(255, 255, 255, 0.822);
+    padding-bottom: 30px;
+    padding-top: 30px;
+    width: 230px;
+    height: 300px;
+    background-color: rgb(240, 240, 240);
     border-radius: 20px;
-    color: rgb(54, 54, 54);
+    color: #515555;
+    border: 1px solid #515555;
+}
+.CharacterLink{
+    display: flex;
+    text-align:end;
+    background-color: rgb(44, 171, 180);
+    color: white;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 40px;
+    
+    
 }
 .CharacterCard img{
-    max-height: 300px;
+    max-height: 200px;
+    max-width: 200px;
+}
+.Search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+  
+}
+.Search input{
+    border-radius: 10px;
+    border: 1px solid rgb(253, 253, 191);
+    width: 250px;
+    padding: 10px;
+}
+.Search input{
+    border-radius: 20px;
+    border: 1px solid rgb(253, 253, 191);
+    
 }
