--- a/web/src/Styles/Character.css
+++ b/web/src/Styles/Character.css
@@ -1,10 +1,10 @@
-.GameInfo {
+.CharacterInfo {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.GameImgs {
+.CharacterImgs {
 
     display: flex;
     max-width: 400px;
@@ -12,14 +12,48 @@
     perspective: 600px;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    justify-content: center;
+  
     margin-left: 20px;
+    margin-top: 20px;
     border-radius: 20px;
-    
+    /* background-image: url('../Imgs/Bg/BookIcon.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; */
+    background-color: #f5f5f5;
+    border: 3px solid #ccc26b;
 }
 
-.GameTitleLogo {
-    max-width: 200px;
+.sliderimg {
+    display: block;
+    margin: 0 auto;
+    padding-top: 20px;
+   
+    width: 300px;
+    height: 400px;
+    object-fit: contain;
+
+ }
+ 
+.alice-carousel__prev-btn-item,.alice-carousel__next-btn-item{
+    border: none;
+    color: #000;
+   
+    font-size: 24px;
+    width: auto;
+    height: auto;
+    padding: 10px; 
+}
+:hover 
+.alice-carousel__prev-btn-item,.alice-carousel__next-btn-item{
+ 
+    color: #000; 
+
+}
+
+.CharacterImgs img{
+    width: 200px;
 }
 
 .BoxArt {
@@ -57,7 +91,7 @@
 
 }
 @media (max-width: 768px) {
-    .GameInfo {
+    .CharacterInfo {
         display: flex;
         justify-content: center;
         align-items: center;
