--- a/web/src/Styles/Game.css
+++ b/web/src/Styles/Game.css
@@ -5,7 +5,7 @@
 }
 
 
-.CharacterImgs {
+.GameImgs {
 
     display: flex;
     max-width: 400px;
@@ -18,7 +18,7 @@
     border-radius: 20px;
     
 }
-.CharacterImgs img{
+.GameTitleLogo img{
     width: 200px;
 }
 
