--- a/web/src/Styles/Characters.css
+++ b/web/src/Styles/Characters.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     justify-content: center;
     
-    gap: 30px;
+    gap: 40px;
 }
 
 .CharacterTitle {
@@ -24,8 +24,8 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
-    width: 230px;
-    height: 350px;
+    width: 240px;
+    height: 420px;
     background-color: #f5f5f5;
     border-radius: 20px;
     color: #515555;
@@ -35,8 +35,14 @@
     background-size: 180px;
     background-repeat: no-repeat;
     background-position: center; */
-   
+}
+
+.CharacterCard div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
+   
 }
 .CharacterLink {
     background-color: #c0b763;
@@ -47,13 +53,26 @@
     padding-bottom: 15px;
     border-bottom-right-radius: 17px;
     border-bottom-left-radius: 17px;
-    max-width:190px;
-    width: 250px;
+    
+    width: 200px;
     text-align: center;
 }
 .CharacterCard img{
     max-height: 200px;
-
+}
+.CharactersRaces{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #c0b763d0;
+    border-radius: 30px;
+    padding: 10px;
+    width: 150px;
+    gap: 10px;
+    color: white;
+}
+.CharactersRaces img{
+    width: 35px;
 }
 .Search{
     display: flex;
