--- a/web/src/Styles/Games.css
+++ b/web/src/Styles/Games.css
@@ -15,21 +15,21 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px; 
-    padding: 20px;
+    gap: 35px; 
 }
 .GameCard{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
-    width: 260px;
-  
+    width: 250px;
     text-align: center;
 
     border-radius: 20px;
-    padding: 15px;
-    gap: 10px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-right: 15px;
+    
     color: #515555;
     box-shadow: 0px 0px 2px;
     transition: 0.2s ease;
@@ -38,17 +38,22 @@
 
 .GameCard a{
     display: flex;
-    text-align:end;
+    align-items: center;
+    justify-content: center;
+    
     background-color: rgb(44, 171, 180);
     color: white;
-    border: 1px solid white;
-    padding-left: 40px;
-    padding-right: 40px;
+   
+    width: 112%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     padding-top: 15px;
     padding-bottom: 15px;
-    border-radius: 40px;
-    font-size: 13px;
+   
     
+}
+.GameCard h2{
+    font-size: 20px;
 }
 .GameCard:hover {
     transform: scale(1.05);
