--- a/web/src/Styles/Games.css
+++ b/web/src/Styles/Games.css
@@ -5,7 +5,7 @@
 .GameTitle {
     
     font-family: 'HyliaSerif', sans-serif;
-    color: #c0b763;
+    color: #b5a54d;
     letter-spacing: 3px;
     font-weight: normal;
     font-size: 70px;
