--- a/web/src/Styles/Home.css
+++ b/web/src/Styles/Home.css
@@ -21,7 +21,7 @@ html, body {
     align-items: start;
     
     padding: 70px;
-    /* Se quiser deixar responsivo para mobile é só tirar o width */
+   
     width: 35%;
     font-size: 30px;
     color: rgb(29, 29, 122); 
@@ -59,4 +59,26 @@ html, body {
         background-position:50px; 
     
     }
+    .Home{
+        background-image: url('');
+        
+        padding-bottom: 0px;
+        margin: 0px;
+    }
+    .TitlesAndMore{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+       
+        margin: 0px;
+        width: 100%;
+        font-size: 20px;
+        padding: 0px;
+        color: rgb(29, 29, 122); 
+        font-weight: bold; 
+        text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
+        
+    }
   }
+
