--- a/web/src/Styles/mobile/Characters.css
+++ b/web/src/Styles/mobile/Characters.css
@@ -1,25 +1,38 @@
-@media (max-width: 940px) {
-   /*  .CharacterCard {
+@media (max-width: 620px) {
+    .SeeCharacters{
+        gap: 35px;
+    }
+    .CharacterTitle {
+        font-family: 'HyliaSerif', sans-serif;
+        letter-spacing: 3px;
+        color: #b5a54d;   
+        font-weight: normal;
+        font-size: 60px;
+    
+      }
+    .CharacterCard {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: end;
         
-        padding-left: 10px;
+        padding-left: 0px;
         padding-right: 00px;
-        padding-top: 10px;
+        padding-top: 0px;
         width: 95%;
-        height: 220px;
-        background-color: #f5f5f5;
+        height: 200px;
+        background-color: #1d1b1b;
         border-radius: 20px;
-        color: #515555;
-        border: 1px solid #c0b763;
+        color: #f7f7f7;
         justify-content: space-between;
-      
+        background-position: center;
+        background-size: 120px;
+        background-image: url('');
         
     }
     .CharacterCard h2{
-        display: flex;
-        flex-direction: column;
+        font-size: 18px;
+        border-bottom: 1px #c0b763 solid;
+        margin: 9px;
     }
     
     .CharacterCard img{
@@ -27,20 +40,61 @@
         flex-direction: column;
         max-height: 150px;
     }
+    .CharacterCard div{
+        height: 100%;
+        width: 45%;
+        border-top-left-radius: 17px;
+        border-bottom-left-radius: 17px;
+        border-right: 1px #b1a751 solid;
+    }
     .CharacterLink {
-        background-color: #c0b763;
-        color: white;
         padding-left: 0px;
         padding-right: 00px;
         padding-top: 0px;
         padding-bottom: 0px;
         border-bottom-left-radius: 0px;
-        border-bottom-right-radius: 17px;
         
-        border-top-right-radius: 17px;
+        padding: 15px;
+        width: 60%;
         
-        width: 125px;
-        height: 100%;
         text-align: center;
-    } */
+    }
+    .CharactersRaces{
+        display: none;
+    }
+    .Search input{
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border: 1px solid #b1a751;
+        border-right: none;
+        width: 40%;
+        padding: 20px;
+        margin-bottom: 20px;
+    }
+    .Search button{
+        padding: 20px;
+        border: 1px solid #b1a751;
+       
+        color: #515555;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        background-color: white;
+        margin-bottom: 20px;
+    }
   }
+  @media (max-width: 430px) {
+    .CharacterTitle {
+        font-size: 54px;
+    
+      }
+      .CharacterCard img{
+        display: flex;
+        flex-direction: column;
+        max-height: 130px;
+    }
+    .CharacterCard h2{
+        font-size: 16px;
+        border-bottom: 1px #c0b763 solid;
+        margin:12px;
+    }
+    }
