--- a/web/src/App.css
+++ b/web/src/App.css
@@ -4,7 +4,8 @@
 }
 
 body{
-     background-image: url('./Imgs/Bg/NavBar1.png');
+    background-image: url('./Imgs/Bg/NavBar1.png');
+    background-color: rgb(24, 24, 24);
     background-repeat: repeat;
-    background-size: 620px;
+    background-size: 700px;
 }
