--- a/web/src/Styles/Bosses.css
+++ b/web/src/Styles/Bosses.css
@@ -1,20 +1,4 @@
-.GameTitle {
-    text-align: center;
-    margin: 60px;
-    font-family: 'HyliaSerif', sans-serif;
-    color: #b5a54d;
-    letter-spacing: 3px;
-    font-weight: normal;
-    font-size: 70px;
-
-  }
-.AllGames {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 35px; 
-}
-.GameCard{
+.BossCard{
     display: flex;
     flex-direction: column;
     justify-content:space-between;
@@ -28,17 +12,17 @@
     padding-right: 15px;
     
     color: #515555;
-    box-shadow: 0px 0px 2px;
+    box-shadow: 0px 0px 2px rgb(190, 18, 18);
     transition: 0.2s ease;
     background-color: rgb(248, 248, 248);
 }
 
-.GameCard a{
+.BossCard a{
     display: flex;
     align-items: center;
     justify-content: center;
     
-    background-color: rgb(44, 171, 180);
+    background-color: rgb(201, 52, 33);
     color: white;
    
     width: 112%;
@@ -49,10 +33,20 @@
    
     
 }
-.GameCard h2{
-    font-size: 20px;
-}
-.GameCard:hover {
-    transform: scale(1.05);
-    
+
+.BossTitle {
+    text-align: center;
+    margin: 60px;
+    font-family: 'HyliaSerif', sans-serif;
+    color: #515555;
+    letter-spacing: 3px;
+    font-weight: normal;
+    font-size: 70px;
+
   }
+  .AllBosses {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 35px; 
+}
