--- a/web/src/Styles/Home.css
+++ b/web/src/Styles/Home.css
@@ -3,54 +3,55 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    
 }
 
 .Home {
-    background-image: url('../Imgs/Bg/1193449.jpg');
-    background-size: cover; 
-    background-position:center; 
-    background-repeat: no-repeat; 
-    padding-bottom: 200px;
+   background-color: rgb(24, 24, 24);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
     box-sizing: border-box;
+    color: #ffffff;
 }
 
-.TitlesAndMore{
+.TitlesAndMore {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    
-    padding: 70px;
-   
-    width: 35%;
+    align-items: center;
+    text-align: center;
     font-size: 30px;
-    color: rgb(29, 29, 122); 
-    font-weight: bold; 
-    text-shadow: 2px 1px 1px rgba(0, 0, 0, 0.7);
-    
-}
-.TitlesAndMore a{
-    background-color: rgb(54, 32, 151);
-    color: white;
-    text-shadow: none;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border-radius: 40px;
-    font-size: 18px;
+   
+    font-weight: bold;
+    padding: 20px; 
 }
 
-.Home h1{
+
+.Home h1 {
+    
+    font-family: 'HyliaSerif', sans-serif;
+    letter-spacing: 5px;
+    font-weight: normal;
    
-    background-image: url('../Imgs/Bg/ZeldaHome2.png');
-    background-size: cover; 
-    background-clip: text;
-    color: transparent;
-    background-position:bottom; 
-    text-shadow:none;
-    text-align: center;
- 
+    border-bottom: 1px solid #ffffff;
+    margin-bottom: 20px;
+}
+
+.homeButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 30px;
+}
+
+
+.TriForce {
+    width: 300px;
+    margin: 10px;
 }
 
 @media (max-width: 768px) {
@@ -75,8 +76,7 @@ html, body {
         width: 100%;
         font-size: 20px;
         padding: 0px;
-        color: rgb(24, 24, 99); 
-        font-weight: bold; 
+       
         text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
         
     }
