--- a/web/src/Styles/Characters.css
+++ b/web/src/Styles/Characters.css
@@ -10,7 +10,7 @@
     
     font-family: 'HyliaSerif', sans-serif;
     letter-spacing: 3px;
-    color: #b5a54d;   
+    color: #515555;   
     font-weight: normal;
     font-size: 70px;
 
