--- a/web/src/Styles/Games.css
+++ b/web/src/Styles/Games.css
@@ -2,7 +2,7 @@
     text-align: center;
     margin: 60px;
     font-family: 'HyliaSerif', sans-serif;
-    color: #b5a54d;
+    color: #515555;
     letter-spacing: 3px;
     font-weight: normal;
     font-size: 70px;
