--- a/web/src/Styles/Home.css
+++ b/web/src/Styles/Home.css
@@ -3,17 +3,17 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    
+    box-sizing: border-box;
 }
 
 .Home {
    background-color: rgb(24, 24, 24);
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
-    
+    padding: 0px;
+    margin: 0px;
     box-sizing: border-box;
     color: #ffffff;
 }
@@ -26,7 +26,7 @@ html, body {
     font-size: 30px;
    
     font-weight: bold;
-    padding: 20px; 
+    padding: 0px; 
 }
 
 
@@ -37,7 +37,7 @@ html, body {
     font-weight: normal;
    
     border-bottom: 1px solid #ffffff;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .homeButtons {
@@ -51,19 +51,25 @@ html, body {
 
 .TriForce {
     width: 300px;
-    margin: 10px;
+   margin-top: 30px;
+}
+.SimpleBoxes{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-bottom: 50px;
 }
 
 @media (max-width: 768px) {
     .Home h1{
         
         background-position:50px; 
-    
+        border-bottom: 0px;
     }
     .Home{
         background-image: url('');
         
-        padding-bottom: 0px;
+        padding-bottom: 10px;
         margin: 0px;
     }
     .TitlesAndMore{
@@ -80,5 +86,10 @@ html, body {
         text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
         
     }
+    .TriForce {
+        width: 230px;
+        margin-top: 30px;
+    }
+   
   }
 
