--- a/web/src/Styles/Game.css
+++ b/web/src/Styles/Game.css
@@ -27,8 +27,8 @@
     transform-style: preserve-3d;
     animation: rotate3D 4s infinite linear;
     border-radius: 5px;
-    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.363); /* Brilho suave inicial */
-    transition: box-shadow 0.3s ease-in-out; /* Transição suave ao hover */
+    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.363); 
+    transition: box-shadow 0.3s ease-in-out; 
    
 }
 
