--- a/web/src/Styles/SimpleBox.css
+++ b/web/src/Styles/SimpleBox.css
@@ -7,28 +7,73 @@
     background-position: center;
     border-radius: 10px;
     
-    color: white;
+    color: #e9e9e9;
     text-align: center;
     
     
 }
 .BoxInfo{
+    position:relative;
+    
     border-radius: 10px;
-    background: rgba(0, 0, 0, 0.658);
+    background: rgba(0, 0, 0, 0.808);
     width: 300px;
-    height: 150px;
+    height: 175px;
+    font-size: 22px;
+    padding: 10px;
+}
+.BoxInfo .decoration {
+   
+    width: 40px;
+    height: 40px;
 }
 
 
 
 .SimpleBox h3 {
-    font-size: 1.8rem;
+    margin-top: 10px;
     margin-bottom: 10px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    color: rgb(212, 189, 111);
 }
 
 .SimpleBox p {
-    font-size: 1rem;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+    font-size: 16px;
+    
 }
+@media (max-width: 768px) {
+    .BoxInfo{
+     
+        width: 305px;
+        height: 125px;
+        
+    }
+   
+  }
+
+  @media (max-width: 443px) {
+    .BoxInfo{
+     
+        width: 355px;
+        height: 125px;
+        
+    }
+    .BoxInfo .decoration {
+        display: none;
+        width: 50px;
+        height: 40px;
+    }
+    .SimpleBox p {
+       
+        font-weight: normal;
+    }
+  }
+  @media (max-width: 373px) {
+    .BoxInfo{
+     
+        width: 305px;
+        height: 125px;
+        
+    }
+    
+  }
 
